fix: ajustar scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -47,3 +47,19 @@ input::-webkit-inner-spin-button {
 input[type="number"] {
   -moz-appearance: textfield;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  @apply bg-white-beige;
+}
+
+::-webkit-scrollbar-thumb {
+  @apply bg-neutral-200 rounded-full;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  @apply bg-neutral-400;
+}
